--- a/lessons/index.html
+++ b/lessons/index.html
@@ -6,12 +6,12 @@
 
 		<title>reveal.js</title>
 
-		<link rel="stylesheet" href="/reveal.js-master/css/reset.css">
-		<link rel="stylesheet" href="/reveal.js-master/css/reveal.css">
-		<link rel="stylesheet" href="/reveal.js-master/css/theme/black.css">
+		<link rel="stylesheet" href="/programming/reveal.js-master/css/reset.css">
+		<link rel="stylesheet" href="/programming/reveal.js-master/css/reveal.css">
+		<link rel="stylesheet" href="/programming/reveal.js-master/css/theme/black.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="/reveal.js-master/lib/css/monokai.css">
+		<link rel="stylesheet" href="/programming/reveal.js-master/lib/css/monokai.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 
-		<script src="/reveal.js-master/js/reveal.js"></script>
+		<script src="/programming/reveal.js-master/js/reveal.js"></script>
 
 		<script>
 			// More info about config & dependencies:
@@ -44,10 +44,10 @@
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
 				dependencies: [
-					{ src: '/reveal.js-master/plugin/markdown/marked.js' },
-					{ src: '/reveal.js-master/plugin/markdown/markdown.js' },
-					{ src: '/reveal.js-master/plugin/notes/notes.js', async: true },
-					{ src: '/reveal.js-master/plugin/highlight/highlight.js', async: true }
+					{ src: '/programming/reveal.js-master/plugin/markdown/marked.js' },
+					{ src: '/programming/reveal.js-master/plugin/markdown/markdown.js' },
+					{ src: '/programming/reveal.js-master/plugin/notes/notes.js', async: true },
+					{ src: '/programming/reveal.js-master/plugin/highlight/highlight.js', async: true }
 				]
 			});
 		</script>
