--- a/lessons/index.html
+++ b/lessons/index.html
@@ -27,23 +27,32 @@
 			<div class="slides">
 				<section>Lesson 1</section>
 				<section>what is programming.</section>
-				<section>what is a computer.</section>
-				<section>
-					hardware
-					<section>cpu</section>
-					<section>memory
-						<lu>
-							<li>rom</li>
-							<li>ram</li>
-						</lu>
-					</section>
-					<section>peripheral devices
+				<section>what is a computer.
+					<section>
+						hardware
+						<section>cpu</section>
+						<section>memory
 							<lu>
-								<li> perscreen/printer</li>
-								<li>keyboard/mouse/touch</li>
-								<li></li>neteork</li>
+								<li>rom</li>
+								<li>ram</li>
 							</lu>
 						</section>
+						<section>peripheral devices
+								<lu>
+									<li> perscreen/printer</li>
+									<li>keyboard/mouse/touch</li>
+									<li></li>neteork</li>
+								</lu>
+							</section>
+					</section>
+				</section>
+				<section>
+						software
+
+						<section>drivers</section>
+						<section>programs</section>
+						<section>data files</section>
+						<section>operating systems</section>
 				</section>
 				<section></section>
 
@@ -54,11 +63,7 @@
 				<section>Lesson 3</section>
 				<section>Lesson 4</section>
 				<section>Lesson 5
-						software
-						drivers
-						programs
-						data files
-						operating systems
+						
 				the internet
 					browser
 					HTML
