--- a/lessons/index.html
+++ b/lessons/index.html
@@ -38,12 +38,12 @@
 							</lu>
 						</section>
 						<section>peripheral devices
-								<lu>
-									<li> perscreen/printer</li>
-									<li>keyboard/mouse/touch</li>
-									<li></li>neteork</li>
-								</lu>
-							</section>
+							<lu>
+								<li> perscreen/printer</li>
+								<li>keyboard/mouse/touch</li>
+								<li>neteork</li>
+							</lu>
+						</section>
 					</section>
 				</section>
 				<section>
