--- a/lessons/index.html
+++ b/lessons/index.html
@@ -27,9 +27,7 @@
 			<div class="slides">
 				<section>Lesson 1</section>
 				<section>what is programming.</section>
-				<section>what is a computer.
-					<section>
-						hardware
+				<section>what is a computer						hardware
 						<section>cpu</section>
 						<section>memory
 							<lu>
@@ -44,7 +42,6 @@
 								<li>neteork</li>
 							</lu>
 						</section>
-					</section>
 				</section>
 				<section>
 						software
