--- a/lessons/index.html
+++ b/lessons/index.html
@@ -27,7 +27,8 @@
 			<div class="slides">
 				<section>Lesson 1</section>
 				<section>what is programming.</section>
-				<section>what is a computer						hardware
+				<section>what is a computer	
+					<section>hardware
 						<section>cpu</section>
 						<section>memory
 							<lu>
@@ -42,6 +43,7 @@
 								<li>neteork</li>
 							</lu>
 						</section>
+					</section>
 				</section>
 				<section>
 						software
