--- a/lessons/index.html
+++ b/lessons/index.html
@@ -48,7 +48,12 @@
 				<section>
 						software
 
-						<section>drivers</section>
+						<section>drivers
+							<section>drivers 1</section>
+							<section>drivers 2</section>
+							<section>drivers 3</section>
+							<section></section>
+						</section>
 						<section>programs</section>
 						<section>data files</section>
 						<section>operating systems</section>
